--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello World, Github hosted Website 
+Hello World, Github hosted Website <br>
+<a href="https://github.warzinik.com/PowerofZoomLandscape.pdf"><img scr="https://github.warzinik.com/PowerofZoomLandscape.png"></a>
