--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 Hello World, Github hosted Website <br>
-<a href="https://github.warzinik.com/PowerofZoomLandscape.pdf"><img src="https://github.warzinik.com/PowerofZoomLandscape.png"></a>
+<a href="https://github.com/jwarzi/jwarzi.github.io/blob/master/PowerofZoomLandscape.pdf"><img src="https://github.com/jwarzi/jwarzi.github.io/blob/master/PowerofZoomLandscape.png"></a>
