--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-Hello World, Github hosted Website <br>
+<H2>Hello World, Github hosted Website </H2>
 <a href="https://github.com/jwarzi/jwarzi.github.io/blob/master/PowerofZoomLandscape.pdf"><img src="https://raw.githubusercontent.com/jwarzi/jwarzi.github.io/master/PowerofZoomLandscape.png"></a>
