--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <H2>Hello World, Github hosted Website </H2>
-<a href="https://github.com/jwarzi/jwarzi.github.io/raw/master/PowerofZoomLandscape.pdf"><img src="https://raw.githubusercontent.com/jwarzi/jwarzi.github.io/master/PowerofZoomLandscape.png"></a>
+<a href="https://github.com/jwarzi/jwarzi.github.io/raw/master/PowerofZoomLandscape.pdf"><img width="800" src="https://raw.githubusercontent.com/jwarzi/jwarzi.github.io/master/PowerofZoomLandscape.png"></a>
